# hybro-hub

./: CHANGELOG.md  README.md  config.yaml.example  pyproject.toml
docs/: DISK_BACKED_PUBLISH_QUEUE_DESIGN.md
examples/: discover_agents.py  send_message.py  stream_message.py
hub/: a2a_compat.py  agent_registry.py  cli.py  config.py  dispatcher.py  lock.py  main.py  privacy_router.py  publish_queue.py  relay_client.py
hybro_sdk/: __init__.py  _sse.py  client.py
tests/: manual_e2e_live.py  test_agent_registry.py  test_cli.py  test_client.py  test_config.py  test_dispatcher.py  test_main.py  test_publish_queue.py  test_relay_client.py  test_sse.py
